--- a/src/Profile.css
+++ b/src/Profile.css
@@ -11,29 +11,35 @@
 }
 
 .profile-card {
-    background: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(12px);
-    border-radius: 1.5rem;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
-    padding: 2rem;
-    max-width: 36rem;
-    width: 100%;
-    margin: 1rem;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(12px);
+  border-radius: 1.5rem;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+  padding: 2rem;
+  max-width: 50rem;
+  width: 100%;
+  margin: 1rem;
+}
+
+.profile-book-recs {
+  display: flex;
+  gap: 1rem;
+  padding-bottom: 5rem;
 }
 
 .profile-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .profile-title {
-    font-family: "Courier New", Courier, monospace;
-    font-size: 2.5rem;
-    font-weight: 800;
-    margin-top: 1rem;
-    color: #4338ca;
-    text-shadow: 0 1px 2px rgba(67,56,202,0.08);
+  font-family: "Courier New", Courier, monospace;
+  font-size: 2.5rem;
+  font-weight: 800;
+  margin-top: 1rem;
+  color: #4338ca;
+  text-shadow: 0 1px 2px rgba(67, 56, 202, 0.08);
 }
 
 .profile-subtitle {
@@ -73,25 +79,27 @@
 }
 
 .profile-section-title {
-    font-family: "Courier New", Courier, monospace;
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: #8e8056;
-    margin-bottom: 0.5rem;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #8e8056;
+  margin-bottom: 0.5rem;
 }
 
-.profile-skills-list {
-  display: grid;
+/* .profile-fiction {
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 0.5rem;
   font-size: 0.95rem;
   color: #374151;
   padding: 0;
-  list-style: none;
-}
-
-.profile-projects-list {
   list-style: disc;
+} */
+
+.profile-fiction,
+.profile-nonfiction {
+  list-style: disc;
+  gap: 0.5rem;
+  line-height: 2.5rem;
   padding-left: 1.25rem;
   color: #374151;
   font-size: 0.95rem;
